Fix video placeholder on mobile

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -47,8 +47,11 @@ h1
                 flex: 0 0 11.11111%
                 max-width: 11.11111%
         .video
-            position: absolute
-            z-index: 1
+            display: none
+            @media (min-width: 1000px)
+                display: block
+                position: absolute
+                z-index: 1
 
     &.sobre, &.parceiros
         @media (min-width: 1000px)
